fixed scrollbar hiding and jsons files

--- a/src/index.css
+++ b/src/index.css
@@ -177,4 +177,10 @@ html.dark .primary-button:hover {
   input[type="submit"] {
     @apply cursor-pointer;
   }
+  body[data-scroll-locked] {
+    overflow: visible !important;
+    margin-right: 0 !important;
+    pointer-events: auto !important;
+    position: static !important;
+  }
 }
